--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^5.0.3"
+    "web-vitals": "^5.0.3",
+    "react-markdown": "^8.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
