--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,71 @@
 version: "3.9"
 services:
-  db:
-    image: postgres:15
+  postgres:
+    container_name: postgres
     restart: always
+    networks:
+      - db-network
+    image: postgres:17
     environment:
-      POSTGRES_DB: testchat
-      POSTGRES_USER: testuser
-      POSTGRES_PASSWORD: testpass
+      POSTGRES_DB: agb
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      POSTGRES_HOST_AUTH_METHOD: scram-sha-256
+      PGDATA: /var/lib/postgresql/data/pgdata/
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -d agb -U user" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - ./pg-data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
-
-  pgadmin:
-    image: dpage/pgadmin4
-    restart: always
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      PGADMIN_DEFAULT_PASSWORD: admin
-    ports:
-      - "5050:80"
-    depends_on:
-      - db
+    command: postgres -c shared_buffers=128MB -c max_connections=100
 
   backend:
+    container_name: backend
+    networks:
+      - db-network
     build: ./backend
-    environment:
-      DATABASE_URL: postgresql+psycopg2://testuser:testpass@db:5432/testchat
-      POSTGRES_USER: testuser
-      POSTGRES_PASSWORD: testpass
-      POSTGRES_DB: testchat
-      VSEGPT_API_KEY: sk-or-vv-e9b7383136e05472c7716cadd20fa09cec299bc80ee8607165f8fd890a4bc194
+    command: bash -c "alembic upgrade head && python3 main.py"
     depends_on:
-      - db
+      postgres:
+        condition: service_healthy
+    environment:
+      - DATABASE_URL=postgresql+psycopg2://user:password@postgres:5432/agb
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=agb
+      - VSEGPT_API_KEY=sk-or-vv-e9b7383136e05472c7716cadd20fa09cec299bc80ee8607165f8fd890a4bc194
     ports:
       - "8000:8000"
 
   frontend:
+    container_name: frontend
+    networks:
+      - db-network
     build: ./frontend
     ports:
-      - "3000:80"
+      - "80:80"
     depends_on:
       - backend
 
+  # pgadmin (опционально)
+  # pgadmin:
+  #   image: dpage/pgadmin4
+  #   environment:
+  #     PGADMIN_DEFAULT_EMAIL: admin@admin.org
+  #     PGADMIN_DEFAULT_PASSWORD: admin
+  #     PGADMIN_CONFIG_SERVER_MODE: 'False'
+  #   ports:
+  #     - "5050:80"
+  #   depends_on:
+  #     - postgres
+
+networks:
+  db-network:
+    driver: bridge
+
 volumes:
-  postgres_data: 
+  postgres-data: 
