--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,14 +2,37 @@ server {
     listen 80;
     server_name _;
 
+    location /api/ {
+        proxy_pass http://backend:8000/api/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Authorization $http_authorization;
+    }
+
+    location /chat/ {
+        proxy_pass http://backend:8000/chat/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Authorization $http_authorization;
+    }
+
+    location /dialogs/ {
+        proxy_pass http://backend:8000/dialogs/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Authorization $http_authorization;
+    }
+
+    location /token {
+        proxy_pass http://backend:8000/token;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Authorization $http_authorization;
+    }
+
+    # Всё остальное — статика (SPA)
     location / {
         root   /usr/share/nginx/html;
         try_files $uri /index.html;
     }
-
-    location /api/ {
-        proxy_pass http://backend:8000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
-} 
+}
