--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name _;
+    server_name felix.ai.almazgeobur.ru;
 
     location /api/ {
         proxy_pass http://backend:8000/api/;
